--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         	<figure>
 
-            	<div class="parallax-window item tp-banner-container" data-parallax="scroll" data-image-src="http://placehold.it/1920x840"></div>
+            	<div class="parallax-window item tp-banner-container" data-parallax="scroll" data-image-src="./images/main_title.png"></div>
 
             </figure>
 
@@ -167,51 +167,6 @@
 
 
             <!-- top pan -->
-
-            <section role="loges" class="top-pan">
-
-            	<div class="container">
-
-                	<ul class="row">
-
-                    	<li class="col-xs-12 col-sm-3 col-md-2 col-lg-2 ">Trusted by</li>
-
-                        <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2 ">
-
-                        	<a href="#"><img src="images/logoes/logoes-1.png" alt="" class="img-responsive"/></a>
-
-                        </li>
-
-                        <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
-
-                        	<a href="#"><img src="images/logoes/logoes-2.png" alt="" class="img-responsive"/></a>
-
-                        </li>
-
-                        <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
-
-                        	<a href="#"><img src="images/logoes/logoes-3.png" alt="" class="img-responsive"/></a>
-
-                        </li>
-
-                        <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
-
-                        	<a href="#"><img src="images/logoes/logoes-4.png" alt="" class="img-responsive"/></a>
-
-                        </li>
-
-                        <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
-
-                        	<a href="#"><img src="images/logoes/logoes-5.png" alt="" class="img-responsive"/></a>
-
-                        </li>
-
-                    </ul>
-
-                </div>
-
-            </section>
-
         	<!-- top pan -->
 
 
@@ -226,17 +181,13 @@
 
                         <h4>What we do</h4>
 
-                        <h2>We make your business gain more<br/>revenue at a glance.</h2>
+                        <h2>We make our dream real.<br/>We will fly high.</h2>
 
                     </header>
 
                     <article>
 
-                    	<p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, ves<br/>
-
-                        tibulum at eros. Vestibulum id ligula porta felis euismod semper. Nulla vitae elit libero, a pharetra augue.<br/>
-
-                        Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Maecenas mollis interdum!</p>
+                    	<p>For the advanced technology, we will develop and enjoy our hobby more than now.<br/>
 
                     </article>
 
@@ -340,7 +291,7 @@
 
                     <div class="col-xs-12 col-sm-6 col-md-6">
 
-                        <figure class="row" style="background-image:url('http://placehold.it/1600x800')"></figure>
+                        <figure class="row" style="background-image:url('./images/second_title.png')"></figure>
 
                     </div>
 
@@ -356,7 +307,7 @@
 
                     <div class="col-xs-12 col-sm-6 col-md-6">
 
-                    	<figure class="row" style="background-image:url('http://placehold.it/1600x800')"></figure>
+                    	<figure class="row" style="background-image:url('./images/second_title.png')"></figure>
 
                     </div>
 
