--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
                 <div class="video-pan text-center">
 
-                	<a id="video" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=0K-g84sK6R0',containment:'.bg-container-youtube', showControls:false,autoPlay:true, loop:true, startAt:0, opacity:1, addRaster:false, quality:'large'}"></a>
+                	<a id="video" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=sJzWA27HdtM',containment:'.bg-container-youtube', showControls:false,autoPlay:true, loop:true, startAt:0, opacity:1, addRaster:false, quality:'large'}"></a>
 
 
 
@@ -345,7 +345,7 @@
 
                     <div class="bg-container-youtube"></div>
 
-                	<header><a class="popup-vimeo video-button" href="https://vimeo.com/45830194"><i class="fa fa-caret-right" aria-hidden="true"></i></a>
+                	<header><a class="popup-vimeo video-button" href="https://www.youtube.com/watch?v=sJzWA27HdtM"><i class="fa fa-caret-right" aria-hidden="true"></i></a>
 
                     <h4>Video Preview Of Product</h4>
 
