아이콘이랑 현재 해당사항 없는 내용 삭제

--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@
 
                                 <ul class="nav navbar-nav">
 
-                                    <li class="active"><a href="#headere-top" title="Home">Home</a></li>
+                                    <li class="active"><a href="#headere-top" title="Home">홈</a></li>
 
-                                    <li><a href="#section-one" title="Overview">Overview</a></li>
+                                    <li><a href="#section-one" title="Overview">소개</a></li>
 
-                                    <li><a href="#section-two" title="Features">Features</a></li>
+              <!--                      <li><a href="#section-two" title="Features">설명</a></li> -->
 
-                                    <li><a href="#section-four" title="Team">Team</a></li>
+                                    <li><a href="#section-four" title="Team">팀</a></li>
 
-                                    <li><a href="#section-five" title="Contact">Contact</a></li>
+                  <!--                  <li><a href="#section-five" title="Contact">Contact</a></li>
 
-                                    <li><a href="#section-six" title="Join Us">Join Us</a></li>
+                                    <li><a href="#section-six" title="Join Us">Join Us</a></li> -->
 
                                 </ul>
 
@@ -197,28 +197,26 @@
 
                     	<div class="row four-box-pan" role="four-box">
 
+                            <section class="col-xs-12 col-sm-6 col-md-6">
 
+                            	<figure><i class="fa fa-paper-plane" aria-hidden="true"></i></figure>
 
-                            <section class="col-xs-12 col-sm-6 col-md-3">
+                            	<h5>Drone Solution</h5>
 
-                            	<figure><i class="fa fa-rocket" aria-hidden="true"></i></figure>
-
-                            	<h5>STARTUP FEATURE</h5>
-
-                                <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.</p>
+                                <p>We support services that are very helpful to farmers with AI and unmanned aircraft technology.</p>
 
                             </section>
 
-                            <section class="col-xs-12 col-sm-6 col-md-3">
+                            <section class="col-xs-12 col-sm-6 col-md-6">
 
                             	<figure><i class="fa fa-magic" aria-hidden="true"></i></figure>
 
-                            	<h5>Higly customizable</h5>
+                            	<h5>Emotional Service</h5>
 
-                                <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.</p>
+                                <p>We develop highly emotional communication services.</p>
 
                             </section>
-
+<!--
                             <section class="col-xs-12 col-sm-6 col-md-3">
 
                             	<figure><i class="fa fa-paper-plane" aria-hidden="true"></i></figure>
@@ -238,7 +236,7 @@
                                 <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.</p>
 
                             </section>
-
+-->
 
 
                         </div>
@@ -271,7 +269,7 @@
 
                         	<h2>Get Maxium benifites by working with our experts.</h2>
 
-                            <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.</p>
+<!--                            <p>abce</p>
 
                             <ul>
 
@@ -284,7 +282,7 @@
                                 <li>Maecenas sed diam eget risus</li>
 
                             </ul>
-
+-->
                         </article>
 
                     </div>
@@ -316,11 +314,11 @@
                     	<article>
 
                     		<h2>We even give you more than your expectation</h2>
-
+<!--
                             <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit amet non magna. </p>
 
                             <p>Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius.</p>
-
+-->
                         </article>
 
                     </div>
@@ -357,209 +355,11 @@
 
 
 
-                <!--slider pan -->
-
-                <div class="slider-pan">
-
-                	<header role="title-page" class="text-center">
-
-                    	<h4>Customer Voice</h4>
-
-                    </header>
-
-                    <!-- carousel -->
-
-                    <div id="owl-demo" class="owl-carousel text-center" role="slider">
-
-
-
-                    	<section class="item">
-
-                            <article>
-
-                                Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit <br/>
-
-                                amet non magna felis euismod leo orta felis semper.
-
-                            </article>
-
-                            <header>
-
-                                <h5>Antony Casalena</h5>
-
-                                <h6>Vice president, IQTeam</h6>
-
-                            </header>
-
-                       	</section>
-
-                        <section class="item">
-
-                            <article>
-
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam quis tortor nec diam dapibus<br>efficitur in quis sem. Morbi tristique purus at vestibulum malesuada.
-
-                            </article>
-
-                            <header>
-
-                                <h5>Brain Rice</h5>
-
-                                <h6>VP, Lexix Pvt Ltd</h6>
-
-                            </header>
-
-                       	</section>
-
-                        <section class="item">
-
-                            <article>
-
-                                Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit <br/>
-
-                                amet non magna felis euismod leo orta felis semper.
-
-                            </article>
-
-                            <header>
-
-                                <h5>Antony Casalena</h5>
-
-                                <h6>Vice president, IQTeam</h6>
-
-                            </header>
-
-                       	</section>
-
-                        <section class="item">
-
-                            <article>
-
-                                Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit <br/>
-
-                                amet non magna felis euismod leo orta felis semper.
-
-                            </article>
-
-                            <header>
-
-                                <h5>Antony Casalena</h5>
-
-                                <h6>Vice president, IQTeam</h6>
-
-                            </header>
-
-                       	</section>
-
-
-
-
-
-                    </div>
-
-                    <!-- carousel -->
-
-                </div>
-
-                <!--slider pan -->
-
-
-
             </section>
 
             <!-- section-two -->
 
-
-
             <!-- section-three -->
-
-            <section class="section-three" id="section-three">
-
-            	<div class="container">
-
-                	<header role="title-page" class="text-center">
-
-                    	<h4>Flexible Plans</h4>
-
-                        <h2>Select the plan that suits you. Upgrade,<br/> downgrade, or cancel anytime.</h2>
-
-                    </header>
-
-                    <!-- pricing -->
-
-                    <div class="pricing">
-
-                    	<section>
-
-                        	<header><h4>Bronze</h4></header>
-
-                            <h2><span>$10</span> /mo</h2>
-
-                            <ul>
-
-                                <li>Free Shipping</li>
-
-                                <li>24/7 Support</li>
-
-                                <li>Single Licence</li>
-
-                            </ul>
-
-                            <input name="" type="button" value="get Strated">
-
-                        </section>
-
-                        <section>
-
-                        	<header><h4>Silver</h4></header>
-
-                            <h2><span>$20</span> /mo</h2>
-
-                            <ul>
-
-                                <li>Free Shipping</li>
-
-                                <li>24/7 Support</li>
-
-                                <li>Single Licence</li>
-
-                            </ul>
-
-                            <input name="" type="button" value="get Strated">
-
-                        </section>
-
-                        <section>
-
-                        	<header><h4>Gold</h4></header>
-
-                            <h2><span>$50</span> /mo</h2>
-
-                            <ul>
-
-                                <li>Free Shipping</li>
-
-                                <li>24/7 Support</li>
-
-                                <li>Single Licence</li>
-
-                            </ul>
-
-                            <input name="" type="button" value="get Strated">
-
-                        </section>
-
-                    </div>
-
-                    <!-- pricing -->
-
-                </div>
-
-            </section>
-
-            <!-- section-three -->
-
-
 
             <!-- section-four -->
 
@@ -575,123 +375,7 @@
 
                     </header>
 
-                    <!-- Team -->
-
-                    <div class="team-pan row">
-
-
-
-                        <section class="col-xs-12 col-sm-6 col-md-3">
-
-                        	<figure><img src="http://placehold.it/249x263" alt="" class=" img-responsive"/></figure>
-
-                        	<header>
-
-                            	<h5>Antony Casalena</h5>
-
-								<h6>Vice president</h6>
-
-                                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-
-                            </header>
-
-                        </section>
-
-                        <section class="col-xs-12 col-sm-6 col-md-3">
-
-                        	<figure><img src="http://placehold.it/249x263" alt="" class=" img-responsive"/></figure>
-
-                        	<header>
-
-                            	<h5>Anaia Doe</h5>
-
-								<h6>Creative Head</h6>
-
-                                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-
-                            </header>
-
-                        </section>
-
-                        <section class="col-xs-12 col-sm-6 col-md-3">
-
-                        	<figure><img src="http://placehold.it/249x263" alt="" class=" img-responsive"/></figure>
-
-                        	<header>
-
-                            	<h5>Johnathan Doe</h5>
-
-								<h6>Development Lead</h6>
-
-                                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-
-                            </header>
-
-                        </section>
-
-                        <section class="col-xs-12 col-sm-6 col-md-3">
-
-                        	<figure><img src="http://placehold.it/249x263" alt="" class=" img-responsive"/></figure>
-
-                        	<header>
-
-                            	<h5>Julian Gulia</h5>
-
-								<h6>Marketing Head</h6>
-
-                                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-
-                                <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-
-                            </header>
-
-                        </section>
-
-
-
-                    </div>
-
-                    <!-- Team -->
-
-                </div>
+		</div>                    <!-- Team -->
 
             </section>
 
@@ -701,121 +385,8 @@
 
             <!-- section-five -->
 
-            <section class="section-five" id="section-five">
-
-            	<div class="container">
-
-                	 <header role="title-page" class="text-center">
-
-                        <h4>Newsletter Subscribe</h4>
-
-                        <h2>Subscribe to get monthly products updates<br/>and exclusive offers</h2>
-
-                    </header>
-
-                    <!-- subscribe -->
-
-                    <div class="subscribe-form">
-
-                        <div class="ntify_form">
-
-                            <form method="post" action="php/subscribe.php" name="subscribeform" id="subscribeform">
-
-                                <input name="email" type="email" id="subemail" placeholder="Email Address">
-
-
-
-                                <button type="submit" name="" value="Submit">
-
-                                Subscribe <i class="fa fa-envelope" aria-hidden="true"></i></button>
-
-                            </form>
-
-                            <!-- subscribe message -->
-
-                            <div id="mesaj"></div>
-
-                            <!-- subscribe message -->
-
-                        </div>
-
-                    </div>
-
-                    <!-- subscribe -->
-
-                </div>
-
-            </section>
-
-            <!-- section-five -->
-
-
 
             <!-- section-six -->
-
-            <section class="section-six" id="section-six">
-
-            	<div class="container">
-
-                	 <header role="title-page" class="text-center">
-
-                        <h4>Get in touch</h4>
-
-                        <h2>Have any questions? Our team will happy to<br/>answer your questionss.</h2>
-
-                    </header>
-
-                    <!-- contact-form -->
-
-                    <div class="contact-form">
-
-                        <div id="message"></div>
-
-                                <form method="post" action="php/contactfrom.php" name="cform" id="cform">
-
-                                <div class="col-md-6 col-lg-6 col-sm-6">
-
-                                	<input  name="name" id="name" type="text" placeholder="Full Name">
-
-                                </div>
-
-                                <div class="col-md-6 col-lg-6 col-sm-6">
-
-                                	<input  name="email" id="email" type="email"  placeholder="Email Address">
-
-                                </div>
-
-                                <div class="clearfix"></div>
-
-                                <textarea name="comments" id="comments" cols="" rows="" placeholder="Question in Detail"></textarea>
-
-                                <div class="clearfix"></div>
-
-                                <input name="" type="submit" value="Send mail">
-
-                                <div id="simple-msg"></div>
-
-                        </form>
-
-                     </div>
-
-                    <!-- contact-form -->
-
-                    <div class="clearfix"></div>
-
-                </div>
-
-                <!-- map -->
-
-                 <div class="map-wrapper">
-
-                        <div id="surabaya"></div>
-
-                    </div>
-
-                <!-- map -->
-
-            </section>
 
             <!-- section-six -->
 
@@ -831,17 +402,8 @@
 
                 	<section role="socil-icons" class="socil-icons">
 
-                        <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/APLYPLATFORM"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 
-                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-
-                        <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-
-                        <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-
-                        <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-
-                        <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
 
                     </section>
 
@@ -859,7 +421,7 @@
 
                     <!-- nav -->
 
-                    <p class="copy">&copy; 2016 Sartr. All rights reserved. Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
+                    <p class="copy">&copy; 2018 APLY All rights reserved. Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
 
                 </div>
 
