FB 소개 이미지 추가

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
     <title>Aply - Advanced Platform to fLY</title>
 
+	<meta property="og:title" content="APLY - Advanced platform to fly"/>
+	<meta property="og:image" content="http://aply.biz/images/aply_fb.png"/>
+	<meta property="og:url" content="http://aply.biz"/>
+	<meta property="og:site_name" content="APLY"/>
+	<meta property="og:description" content="We will fly high"/>
 
 
     <!-- style -->
