--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 
                  <section class="text-center">
 
-                    <h2>Advanced Platform to fLY</h2>
+                    <h2>A P L Y</h2>
 
-                    <p>Perfect and awesome company to present your dream</p>
+                    <p>Advanced Platform to fLY</p>
 
                 </section>
 
