한국어로 전환중

--- a/index.html
+++ b/index.html
@@ -184,15 +184,15 @@
 
                 	<header role="title-page">
 
-                        <h4>What we do</h4>
+                        <h4>우리가 하는 일</h4>
 
-                        <h2>We make our dream real.<br/>We will fly high.</h2>
+                        <h2>청년농부의 고충을 덜어 드리는 서비스와<br/>좀 더 감성적인 디지털 기기의 소통 시스템을 개발합니다.</h2>
 
                     </header>
 
                     <article>
 
-                    	<p>For the advanced technology, we will develop and enjoy our hobby more than now.<br/>
+                    	<p>보다 진보된 기술을 통해 우리는 보다 재미있는 서비스, 실질적으로 도움이 되는 서비스를 연구하고 개발합니다<br/>
 
                     </article>
 
@@ -206,9 +206,9 @@
 
                             	<figure><i class="fa fa-paper-plane" aria-hidden="true"></i></figure>
 
-                            	<h5>Drone Solution</h5>
+                            	<h5>드론 기술</h5>
 
-                                <p>We support services that are very helpful to farmers with AI and unmanned aircraft technology.</p>
+                                <p>인공지능과 드론기술을 이용해서 농부분들에게 도움이 되는 서비스를 개발합니다</p>
 
                             </section>
 
@@ -216,9 +216,9 @@
 
                             	<figure><i class="fa fa-magic" aria-hidden="true"></i></figure>
 
-                            	<h5>Emotional Service</h5>
+                            	<h5>감성 소통 기술</h5>
 
-                                <p>We develop highly emotional communication services.</p>
+                                <p>아주 감성적인 소통 기술을 개발합니다</p>
 
                             </section>
 <!--
@@ -272,7 +272,7 @@
 
                     	<article>
 
-                        	<h2>Get Maxium benifites by working with our experts.</h2>
+                        	<h2>아주 다양한 분야에 특화된 팀원들이 있습니다 </h2>
 
 <!--                            <p>abce</p>
 
@@ -318,7 +318,7 @@
 
                     	<article>
 
-                    		<h2>We even give you more than your expectation</h2>
+                    		<h2>기대보다 더 나은 가치를 제공합니다</h2>
 <!--
                             <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit amet non magna. </p>
 
@@ -350,7 +350,7 @@
 
                 	<header><a class="popup-vimeo video-button" href="https://www.youtube.com/watch?v=sJzWA27HdtM"><i class="fa fa-caret-right" aria-hidden="true"></i></a>
 
-                    <h4>Video Preview Of Product</h4>
+                    <h4>제품 영상(프로토타입)</h4>
 
                     </header>
 
