--- a/index.html
+++ b/index.html
@@ -1,52 +1,34 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html>
 
   <head>
 
     <meta charset="utf-8">
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-
     <title>Aply - Advanced Platform to fLY</title>
-
-	<meta property="og:title" content="APLY - Advanced platform to fly"/>
-	<meta property="og:image" content="http://aply.biz/images/aply_fb.png"/>
-	<meta property="og:url" content="http://aply.biz"/>
-	<meta property="og:site_name" content="APLY"/>
-	<meta property="og:description" content="We will fly high"/>
-
+    <meta property="og:title" content="APLY - Advanced platform to fly"/>
+    <meta property="og:image" content="http://aply.biz/images/aply_fb.png"/>
+    <meta property="og:url" content="http://aply.biz"/>
+    <meta property="og:site_name" content="APLY"/>
+    <meta property="og:description" content="We will fly high"/>
 
     <!-- style -->
-
     <link href="css/style.css" rel="stylesheet" type="text/css">
-
     <!-- Bootstrap -->
-
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-
     <!-- carousel -->
-
     <link href="css/owl.carousel.css" rel="stylesheet" type="text/css">
-
     <!-- responsive -->
-
     <link href="css/responsive.css" rel="stylesheet" type="text/css">
-
     <!-- font-awesome -->
-
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
     <!-- font-awesome -->
-
     <link href="css/animate.min.css" rel="stylesheet" type="text/css">
-
     <link href="css/popup.css" rel="stylesheet" type="text/css">
-
   </head>
 
    <body class="module-home" data-spy="scroll" data-target=".navbar">
