--- a/index.html
+++ b/index.html
@@ -166,9 +166,7 @@
 
                 	<header role="title-page">
 
-                        <h4>우리가 하는 일</h4>
-
-                        <h2>청년농부의 고충을 덜어 드리는 서비스와<br/>좀 더 감성적인 디지털 기기의 소통 시스템을 개발합니다.</h2>
+                        <h4>현재 이 페이지는 준비중입니다</h4>
 
                     </header>
 
@@ -190,7 +188,7 @@
 
                             	<h5>드론 기술</h5>
 
-                                <p>인공지능과 드론기술을 이용해서 농부분들에게 도움이 되는 서비스를 개발합니다</p>
+                                <p>인공지능과 드론기술을 이용해서 농업활동에 도움이 되는 서비스를 개발합니다</p>
 
                             </section>
 
@@ -200,7 +198,7 @@
 
                             	<h5>감성 소통 기술</h5>
 
-                                <p>아주 감성적인 소통 기술을 개발합니다</p>
+                                <p>아주 감성적인 소통 기술을 연구하고 개발합니다</p>
 
                             </section>
 <!--
@@ -254,7 +252,7 @@
 
                     	<article>
 
-                        	<h2>아주 다양한 분야에 특화된 팀원들이 있습니다 </h2>
+                        	<h2>다양한 분야에 특화된 팀원들이 있습니다 </h2>
 
 <!--                            <p>abce</p>
 
