로고 변경 및 이미지 사잊 변경

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Aply - Advanced Platform to fLY</title>
     <meta property="og:title" content="APLY - Advanced platform to fly"/>
-    <meta property="og:image" content="http://aply.biz/images/aply_fb.png"/>
+    <meta property="og:image" content="http://aply.biz/images/aply_fb.jpg"/>
     <meta property="og:url" content="http://aply.biz"/>
     <meta property="og:site_name" content="APLY"/>
     <meta property="og:description" content="We will fly high"/>
@@ -135,7 +135,7 @@
 
         	<figure>
 
-            	<div class="parallax-window item tp-banner-container" data-parallax="scroll" data-image-src="./images/main_title.png"></div>
+            	<div class="parallax-window item tp-banner-container" data-parallax="scroll" data-image-src="./images/main_title.jpg"></div>
 
             </figure>
 
