피드백 주소 추가

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 
@@ -406,7 +406,7 @@
 
                     <!-- nav -->
 
-                    <p class="copy">&copy; 2018 APLY All rights reserved. Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
+                    <p class="copy">&copy; 2018 <a href=mailto:contactus@gmail.com>APLY Inc.</a> All rights reserved. Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
 
                 </div>
 
