--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
                     <div class="col-xs-12 col-sm-6 col-md-6">
 
-                        <figure class="row" style="background-image:url('./images/second_title.png')"></figure>
+                        <figure class="row" style="background-image:url('./images/drone.jpg')"></figure>
 
                     </div>
 
