배경영상 변경

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         	<figure>
 
-							<div class="parallax-window item tp-banner-container" data-parallax="scroll" data-image-src="./images/main_title.jpg" data-jarallax-video="https://www.youtube.com/watch?v=8dKJUrsJxz4" data-overlay="0.45"></div>
+							<div class="parallax-window item tp-banner-container" data-parallax="scroll" data-image-src="./images/main_title.jpg" data-jarallax-video="https://www.youtube.com/watch?v=https://youtu.be/sJRjsIhRhhk" data-overlay="0.45"></div>
             	
 
           </figure>
