--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<div class="overlayLayer">
-  <div class="loader"></div>
-</div>
+
 	<!-- header -->
 
     	<header role="header" class="header-top" id="headere-top">
@@ -153,7 +151,11 @@
 
         	<figure>
 
-							<div class="parallax-window item tp-banner-container" data-parallax="scroll" data-image-src="./images/main_title.jpg" data-jarallax-video="https://www.youtube.com/watch?v=https://youtu.be/sJRjsIhRhhk" data-overlay="0.45"></div>
+							<div class="parallax-window item tp-banner-container" data-parallax="scroll" data-image-src="./images/main_title.jpg" data-jarallax-video="https://www.youtube.com/watch?v=https://youtu.be/sJRjsIhRhhk" data-overlay="0.45">
+                <div id="loading">
+                <div id="loading-image"><h1>Loading ...</h1></div>
+                </div>
+              </div>
 
 
           </figure>
