--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 							<div class="parallax-window item tp-banner-container" data-parallax="scroll" data-image-src="./images/main_title.jpg" data-jarallax-video="https://www.youtube.com/watch?v=https://youtu.be/sJRjsIhRhhk" data-overlay="0.45">
                 <div id="loading">
-                <div id="loading-image"><h1>Loading ...</h1></div>
+                  <div class="loader"></div>
                 </div>
               </div>
 
