블로그 링크 추가

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
               <!--                      <li><a href="#section-two" title="Features">설명</a></li> -->
 
                                     <li><a href="#section-four" title="Team">팀</a></li>
+                                    <li><a href="https://blog.aply.biz" target="_new" title="BLOG">블로그</a></li>
 
                   <!--                  <li><a href="#section-five" title="Contact">Contact</a></li>
 
