--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                             <h1>
 
-                                <a href="#headere-top" title="Rooky"><img src="images/logo.png" alt="Rooky" title="Rooky"/></a>
+                                <a href="#headere-top" title="Rooky"><img src="images/logo.png" width="100px" alt="Rooky" title="Rooky"/></a>
 
                             </h1>
 
@@ -383,7 +383,7 @@
 	                        <a href="https://www.facebook.com/APLYPLATFORM"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 
                     	</section>
-	
+
 		<br><br><br>
 		<div class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="300" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
                     </header>
