준비중- 문구 삭제

--- a/index.html
+++ b/index.html
@@ -186,15 +186,9 @@
 
             	<div class="container">
 
-                	<header role="title-page">
-
-                        <h4>현재 이 페이지는 준비중입니다</h4>
-
-                    </header>
-
                     <article>
 
-                    	<p>보다 진보된 기술로 우리는 재미있고 멋진 서비스를 연구하고 개발합니다<br/>
+                    	<p>보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다<br/>
 
                     </article>
 
