문구 약간 수정

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
                     <article>
 
-                    	<p>보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다<br/>
+                    	<p>APLY는 보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다<br/>
 
                     </article>
 
