--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
               <!--                      <li><a href="#section-two" title="Features">설명</a></li> -->
 
                                     <li><a href="#section-four" title="Team">팀</a></li>
+                                    <li><a href="#section-five" title="Team">연혁</a></li>
                                     <li><a href="https://blog.aply.biz" target="_new" title="BLOG">블로그</a></li>
 
                   <!--                  <li><a href="#section-five" title="Contact">Contact</a></li>
@@ -392,7 +393,21 @@
 
 
             <!-- section-five -->
+            <section class="section-four" id="section-five">
 
+              <div class="container">
+
+                    <header role="title-page" class="text-center">
+
+                        <h4>연혁</h4>
+                        <h5>2018-12 기술보증기금 자금유치<h5>
+                        <h5>2018-09 법인설립</h5>
+                        <h5>2018-08 K-Startup 기술혁신형 창업기업 지원사업 선정</h5>
+                    </header>
+
+            </div>                    <!-- Team -->
+
+            </section>
 
             <!-- section-six -->
 
