소개 및 두근두근 사이트 링크 추가

--- a/index.html
+++ b/index.html
@@ -253,88 +253,34 @@
             </section>
 
             <!-- section-one -->
-
-
-
-            <!-- section-two -->
-
             <section class="section-two" id="section-two">
 
+              <div class="container">
+                  <br><br><br><br><br><br>
+                  <header role="title-page" class="text-center">
+                      <h4>다양한 분야에 특화된 팀원들이 있습니다</h4>
+                      <h5>- 인공지능/빅데이터/드론/해상 통신기술등을 두루 경험한 기술팀<h5>
+                      <h5>- 국가인재 관리, 통계분석, 과학기술 정책 연구 경험이 풍부한 기획팀</h5>
+                      <h5>- 철학과 이야기가 있는 사용자경험, 디자인을 꾸밀줄 아는 디자인팀</h5>
+                  </header>
+                  <br><br><br><br><br><br>
+                  <header role="title-page" class="text-center">
+                      <h4>기대보다 더 나은 가치를 제공합니다</h4>
+                      <h5>- 이왕 무언가를 할거면 의미있고 재미있게<h5>
+                      <h5>- 효율보다는 효과를</h5>
+                      <h5>- 더 나은 가치와 사회적 기여를 생각하며 일을 즐깁니다</h5>
+                  </header>
+                  <br><br><br><br><br><br>
+              </div>
 
+            </section>
 
-                <!-- image-content -->
-
-                <section>
-
-                	<div class="col-xs-12 col-sm-6 col-md-6">
-
-                    	<article>
-
-                        	<h2>다양한 분야에 특화된 팀원들이 있습니다 </h2>
-
-                            <ul>
-
-                                <li>인공지능/빅데이터/드론/해상 통신기술등을 두루 경험한 기술팀</li>
-
-                                <li>국가인재 관리, 통계분석, 과학기술 정책 연구 경험이 풍부한 기획팀</li>
-
-                                <li>철학과 이야기가 있는 사용자경험, 디자인을 꾸밀줄 아는 디자인팀 </li>
-
-                            </ul>
-
-                        </article>
-
-                    </div>
-
-                    <div class="col-xs-12 col-sm-6 col-md-6">
-
-                        <figure class="row" style="background-image:url('./images/drone.jpg')"></figure>
-
-                    </div>
-
-                 </section>
 
                 <!-- image-content -->
 
                 <div class="clearfix"></div>
 
                  <!-- image-content -->
-
-                 <section>
-
-                    <div class="col-xs-12 col-sm-6 col-md-6">
-
-                    	<figure class="row" style="background-image:url('./images/second_title.png')"></figure>
-
-                    </div>
-
-                    <div class="col-xs-12 col-sm-6 col-md-6">
-
-                    	<article>
-
-                    		<h2>기대보다 더 나은 가치를 제공합니다</h2>
-														<ul>
-
-                                <li>이왕 무언가를 할거면 의미있고 재미있게</li>
-
-                                <li>효율보다는 효과를</li>
-
-                                <li>더 나은 가치와 사회적 기여를 생각하며 일을 즐깁니다</li>
-
-                            </ul>
-                        </article>
-
-                    </div>
-
-                 </section>
-
-                <!-- image-content -->
-
-                <div class="clearfix"></div>
-
-
-
-                <!-- video -->
 
                 <div class="video-pan text-center">
 
@@ -346,9 +292,9 @@
 
                 	<header><a class="popup-vimeo video-button" href="https://www.youtube.com/watch?v=sJzWA27HdtM"><i class="fa fa-caret-right" aria-hidden="true"></i></a>
 
-                    <h4>제품 영상('두근두근' 프로토타입)</h4>
-
-                    </header>
+                    <h4>제품 영상('두근두근' 프로토타입)</h4><br><br>
+                    <font color=#fff>두근두근 사이트</font> <a href="https://dkdk.io"><font color=#77aaff>가보기</font></a>
+                  </header>
 
                 </div>
 
