--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 	<header><a class="popup-vimeo video-button" href="https://www.youtube.com/watch?v=sJzWA27HdtM"><i class="fa fa-caret-right" aria-hidden="true"></i></a>
 
                     <h4>제품 영상('두근두근' 프로토타입)</h4><br><br>
-                    <font color=#fff>두근두근 사이트</font> <a href="https://dkdk.io"><font color=#77aaff>가보기</font></a>
+                    <font color=#fff>두근두근 사이트</font> <a href="http://dkdk.io"><font color=#77aaff>가보기</font></a>
                   </header>
 
                 </div>
